# service_area_api

./: .gitignore  README.md  docker-compose.yml  env.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: build-and-deploy.yml
docker/: Dockerfile
service_area_api/: asgi.py  models.py  serializers.py  settings-production.py  settings.py  storages.py  tests.py  urls.py  views.py  wsgi.py
service_area_api/migrations/: 0001_initial.py  0002_alter_provider_options_alter_servicearea_options.py
